--- a/index.html
+++ b/index.html
@@ -82,6 +82,31 @@
             </div>
           </div>
         </div>
+
+        <div id="level-3" class="w-full sm:w-1/2 md:w-1/3 xl:w-1/3 p-4 text-slate-800">
+          <div class="c-card block shadow-md hover:shadow-2xl rounded-lg overflow-hidden">
+            <div class="relative pb-48 overflow-hidden">
+              <img class="absolute h-full w-full object-contain" src="img/island3.jpg" alt="">
+            </div>
+            <div class="p-4 text-center">
+              <h2 class="mt-2 mb-2 font-bold">HTML / CSS / JS</h2>
+              <h3 class="mt-2 mb-2 italic">Une page complète.</h3>
+              <div class="mt-3 flex items-center"></div>
+            </div>
+            <div class="p-4 border-t border-b text-sm text-gray-700">
+              <span class="flex items-center mb-1">
+                <ul>
+                  <li>Introduction au JS</li>
+                  <li>Formulaires</li>
+                  <li>Intéractions</li>
+                </ul>
+              </span>
+            </div>
+            <div class="achievement p-2 flex items-center italic text-xs text-gray-600">
+              <span class="stars flex"></span>
+              <span class="percent"></span>
+            </div>
+          </div>
     </nav>
 
   <header class="p-4 rounded-t-lg">
@@ -98,6 +123,7 @@
     <div class="tabs">
       <span id="tab-html" class="active"><img src="img/HTML5.svg" alt="Logo HTML"/>HTML</span>
       <span id="tab-css" ><img src="img/css3.png" alt="Logo CSS"/>CSS</span>
+      <span id="tab-js" ><img src="img/js.png" alt="Logo JS"/>JS</span>
     </div>
     <div class="flex flex-wrap">
       <div class="w-full md:w-1/2 tabcontent">
@@ -105,6 +131,9 @@
           class="w-full font-mono text-sm rounded border-2 border-zinc-500 resize-none">
         </div>
         <div id="csssrc"
+          class="w-full font-mono text-sm rounded border-2 border-zinc-500 resize-none">
+        </div>
+        <div id="jssrc"
           class="w-full font-mono text-sm rounded border-2 border-zinc-500 resize-none">
         </div>
       </div>
