--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
   </div>
 
-  <nav id="mainmenu" class="absolute top-28 z-10">
+  <nav id="mainmenu" style="display: none;" class="absolute top-28 z-10">
     <div class="container mx-auto">
 
       <div class="flex flex-wrap -mx-4">
