Validation en fin d'exercice

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </nav>
 
   <header class="p-4 rounded-t-lg">
-    <h3>
+    <h3 id="logo">
       <img src="img/HTML5.svg" alt="Logo HTML" class="inline-block" style="height: 32px; margin-top: -4px;">
       <span id="title" class="text-blue-300 font-bold">Webienvenue</span>
     </h3>
