💥 use exercices as quiz datamodel.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <title>Webienvenue</title>
+  <title>Web</title>
   <link rel="shortcut icon" href="img/HTML52.svg"/>
   <meta charset="utf-8">
 </head>
@@ -112,7 +112,7 @@
   <header class="p-4 rounded-t-lg">
     <h3 id="logo">
       <img src="img/HTML5.svg" alt="Logo HTML" class="inline-block" style="height: 32px; margin-top: -4px;">
-      <span id="title" class="text-blue-300 font-bold">Webienvenue</span>
+      <span id="title" class="text-blue-300 font-bold">Web</span>
     </h3>
     <div id="progress" class="hidden"></div>
     <p id="instruction"></p>
